# DataStructure

./: CMakeLists.txt  main.c
LinkedList/: LinkedList.c  LinkedList.h
SqList/: SqList.c  SqList.h  SqListExercises.c  SqListExercises.h
